--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "@strapi/plugin-i18n": "4.5.6",
     "@strapi/plugin-users-permissions": "4.5.6",
     "@strapi/strapi": "4.5.6",
+    "dotenv": "^16.0.3",
     "mysql": "2.18.1",
     "stripe": "^11.7.0"
   },
